--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-
-<app-side-bar></app-side-bar>
- <app-header></app-header>
-
-<div class="page-wrapper">
-    <div class="page-content-tab">
-    <router-outlet></router-outlet>
-    </div>
-</div>
-
+<app-main-container></app-main-container>
