--- a/src/app/core/main-container/main-container.component.html
+++ b/src/app/core/main-container/main-container.component.html
@@ -8,7 +8,7 @@
     <div class="page-content-tab">
         <router-outlet></router-outlet>
         <footer class="footer text-center text-sm-start">
-          <!-- <app-footer></app-footer> -->
+          <app-footer></app-footer>
         </footer>
     </div>
   </div>
