--- a/src/app/core/sidebar/menu-admin/menu-admin.component.html
+++ b/src/app/core/sidebar/menu-admin/menu-admin.component.html
@@ -3,7 +3,8 @@
   </div>
   <ul class="nav flex-column">
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 1</a>
+        <a class="nav-link" [routerLink] = "['/admin-dash']">Dashboard</a>
+        <!-- <a class="nav-link" [routerLink]="[{ outlets: { pages: ['admin-dash'] } }]">Dashboard</a> -->
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Opción 2</a>
