--- a/src/app/core/sidebar/menu-super-admin/menu-super-admin.component.html
+++ b/src/app/core/sidebar/menu-super-admin/menu-super-admin.component.html
@@ -3,10 +3,10 @@
   </div>
   <ul class="nav flex-column">
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 1</a>
+        <a class="nav-link" [routerLink] = "['/superDashboard']">Dashboard</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 2</a>
+        <a class="nav-link" [routerLink] = "['/categorias']">Categorías</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Opción 3</a>
