--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="topbar">            
+<div class="topbar">
     <!-- Navbar -->
-    <nav class="navbar-custom" id="navbar-custom">    
+    <nav class="navbar-custom" id="navbar-custom">
         <ul class="list-unstyled topbar-nav float-end mb-0">
             <li class="dropdown">
                 <a class="nav-link dropdown-toggle arrow-none nav-icon" data-bs-toggle="dropdown" href="#" role="button"
@@ -14,7 +14,7 @@
                     <a class="dropdown-item" href="#"><img src="assets/images/flags/french_flag.jpg" alt="" height="15" class="me-2">French</a>
                 </div>
             </li><!--end topbar-language-->
-    
+
             <li class="dropdown notification-list">
                 <a class="nav-link dropdown-toggle arrow-none nav-icon" data-bs-toggle="dropdown" href="#" role="button"
                     aria-haspopup="false" aria-expanded="false">
@@ -24,7 +24,7 @@
 
             <h6 class="dropdown-item-text font-15 m-0 py-3 border-bottom d-flex justify-content-between align-items-center">
                 Emails <span class="badge bg-soft-primary badge-pill">3</span>
-            </h6> 
+            </h6>
             <div class="notification-menu" data-simplebar>
                 <!-- item-->
                 <a href="#" class="dropdown-item py-3">
@@ -109,7 +109,7 @@
 
             <h6 class="dropdown-item-text font-15 m-0 py-3 border-bottom d-flex justify-content-between align-items-center">
                 Notifications <span class="badge bg-soft-primary badge-pill">2</span>
-            </h6> 
+            </h6>
             <div class="notification-menu" data-simplebar>
                 <!-- item-->
                 <a href="#" class="dropdown-item py-3">
@@ -141,7 +141,7 @@
                 <a href="#" class="dropdown-item py-3">
                     <small class="float-end text-muted ps-2">40 min ago</small>
                     <div class="media">
-                        <div class="avatar-md bg-soft-primary">                                                    
+                        <div class="avatar-md bg-soft-primary">
                             <i class="ti ti-diamond"></i>
                         </div>
                         <div class="media-body align-self-center ms-2 text-truncate">
@@ -207,21 +207,21 @@
         <a class="nav-link arrow-none nav-icon offcanvas-btn" href="#" data-bs-toggle="offcanvas" data-bs-target="#Appearance" role="button" aria-controls="Rightbar">
             <i class="ti ti-settings ti-spin"></i>
         </a>
-    </li>   
+    </li>
 </ul><!--end topbar-nav-->
 
-<ul class="list-unstyled topbar-nav mb-0">                        
+<ul class="list-unstyled topbar-nav mb-0">
     <li>
-        <button class="nav-link button-menu-mobile nav-icon" id="togglemenu">
+        <button (click)="toggleButton()" class="nav-link button-menu-mobile nav-icon" id="togglemenu">
             <i class="ti ti-menu-2"></i>
         </button>
-    </li> 
+    </li>
     <li class="hide-phone app-search">
         <form role="search" action="#" method="get">
             <input type="search" name="search" class="form-control top-search mb-0" placeholder="Type text...">
             <button type="submit"><i class="ti ti-search"></i></button>
         </form>
-    </li>                       
+    </li>
 </ul>
 </nav>
 <!-- end navbar-->
