--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -1,4 +1,34 @@
-.logo002{
-    height: 50%;
-    width: 80%;
+@use "/src/styles.scss";
+
+$background-color-options: #202124;
+
+.logo002 {
+  height: 50%;
+  width: 80%;
+}
+
+.main-menu-inner {
+  background-color: #363636 !important;
+  .topbar-left {
+    background-color: inherit !important;
   }
+}
+
+.main-icon-menu {
+  background-color: $background-color-options;
+  .main-icon-menu-body {
+    .nav.nav-tabs {
+      .nav-link {
+        background-color: $background-color-options;
+        &.active:before {
+          content: "";
+          border-right: 10px solid #ebc131;
+
+        }
+        .ti {
+          color: #ebc131;
+        }
+      }
+    }
+  }
+}
