ADD: created globalImagesConst, added logos to sidebar

--- a/src/app/core/main-container/main-container.component.html
+++ b/src/app/core/main-container/main-container.component.html
@@ -5,7 +5,7 @@
     <app-header></app-header>
   </div>
   <div class="page-wrapper">
-    <div class="page-content-tab">
+    <div class="page-content-tab" style="background-color: gray;">
         <router-outlet></router-outlet>
         <footer class="footer text-center text-sm-start">
           <app-footer></app-footer>
