--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,63 +1,67 @@
 <div class="main-icon-menu">
-    <a href="#" class="logo logo-metrica d-block text-center">
-        <span>
-            <img src="assets/img/logo-blanco.png" alt="logo-small" class="logo-sm">
-        </span>
-    </a>
-    <div class="main-icon-menu-body">
-        <div class="position-relative h-100">
-            <ul class="nav nav-tabs" >
-              <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Super-Admin" data-bs-trigger="hover">
-                <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-superadmin'] } }]" routerLinkActive="active" class="nav-link">
-                    <i class="ti ti-alien menu-icon"></i>
-                </a>
-              </li>
-              <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Administrador" data-bs-trigger="hover">
-                <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-admin'] } }]" routerLinkActive="active" class="nav-link">
-                        <i class="ti ti-clipboard-list menu-icon"></i>
-                </a>
-              </li>
-              <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Interfaces" data-bs-trigger="hover">
-                <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-interfaces'] } }]" routerLinkActive="active" class="nav-link">
-                        <i class="ti ti-apps menu-icon"></i>
-                </a>
-              </li>
-              <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Kardex" data-bs-trigger="hover">
-                <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-kardex'] } }]" routerLinkActive="active" class="nav-link">
-                        <i class="ti ti-file-analytics menu-icon"></i>
-                </a>
-              </li>
-              <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Tickets" data-bs-trigger="hover">
-                <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-tickets'] } }]" routerLinkActive="active" class="nav-link">
-                        <i class="ti ti-ticket menu-icon"></i>
-                </a>
-              </li>
-            </ul>
-        </div>
+  <a href="#" class="logo logo-metrica d-block text-center">
+    <span>
+      <img [src]="globalImages.logos.comercioLocal_mini_transparente" alt="logo-small" class="logo-sm">
+    </span>
+  </a>
+  <div class="main-icon-menu-body">
+    <div class="position-relative h-100">
+      <ul class="nav nav-tabs">
+        <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Super-Admin"
+          data-bs-trigger="hover">
+          <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-superadmin'] } }]"
+            routerLinkActive="active" class="nav-link">
+            <i class="ti ti-alien menu-icon"></i>
+          </a>
+        </li>
+        <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Administrador"
+          data-bs-trigger="hover">
+          <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-admin'] } }]" routerLinkActive="active"
+            class="nav-link">
+            <i class="ti ti-clipboard-list menu-icon"></i>
+          </a>
+        </li>
+        <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Interfaces"
+          data-bs-trigger="hover">
+          <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-interfaces'] } }]"
+            routerLinkActive="active" class="nav-link">
+            <i class="ti ti-apps menu-icon"></i>
+          </a>
+        </li>
+        <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Kardex" data-bs-trigger="hover">
+          <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-kardex'] } }]" routerLinkActive="active"
+            class="nav-link">
+            <i class="ti ti-file-analytics menu-icon"></i>
+          </a>
+        </li>
+        <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Tickets" data-bs-trigger="hover">
+          <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-tickets'] } }]"
+            routerLinkActive="active" class="nav-link">
+            <i class="ti ti-ticket menu-icon"></i>
+          </a>
+        </li>
+      </ul>
     </div>
-    <!-- <div class="pro-metrica-end">
+  </div>
+  <!-- <div class="pro-metrica-end">
         <a href="" class="profile">
             <img src="assets/images/users/user-4.jpg" alt="profile-user" class="rounded-circle thumb-sm">
         </a>
     </div> -->
+</div>
+
+
+<div class="main-menu-inner">
+  <!-- LOGO -->
+  <div class="topbar-left">
+    <a href="#" class="logo">
+      <img [src]="globalImages.logos.comercioLocal_letras_transparente" alt="logo-large" class="logo002">
+    </a>
   </div>
+  <div class="menu-body navbar-vertical ">
 
-
-  <div class="main-menu-inner">
-    <!-- LOGO -->
-    <div class="topbar-left">
-        <a href="#" class="logo">
-            <span>
-                <img src="assets/img/logonegroMega.png" alt="logo-large" class="logo002">
-            </span>
-        </a>
-    </div>
-    <div class="menu-body navbar-vertical " >
-
-          <router-outlet name="menu"></router-outlet>
-
-    </div>
+    <router-outlet name="menu"></router-outlet>
 
   </div>
 
-
+</div>
