add routing active

--- a/src/app/core/main-container/main-container.component.html
+++ b/src/app/core/main-container/main-container.component.html
@@ -5,10 +5,8 @@
     <app-header></app-header>
   </div>
   <div class="page-wrapper">
-    <div class="page-content-tab" style="background-color: gray;">
+    <div class="page-content-tab">
         <router-outlet></router-outlet>
-        <footer class="footer text-center text-sm-start">
           <app-footer></app-footer>
-        </footer>
     </div>
   </div>
