--- a/src/app/core/sidebar/menu-kardex/menu-kardex.component.html
+++ b/src/app/core/sidebar/menu-kardex/menu-kardex.component.html
@@ -1,7 +1,7 @@
 <div class="title-box">
     <h6 class="menu-title">Recursos Humanos</h6>
   </div>
-  <ul class="nav flex-column">
+  <ul class="navbar-nav nav flex-column">
     <li class="nav-item">
         <a class="nav-link" href="#">Opción 1</a>
     </li>
@@ -22,5 +22,21 @@
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Opción 7</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#sidebarEjemplo" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="sidebarEjemplo">
+            Ejemplo
+        </a>
+        <div class="collapse " id="sidebarEjemplo">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">Opción</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">Opción</a>
+                </li>
+            </ul>
+        </div>
     </li>
   </ul>
