--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
   </a>
   <div class="main-icon-menu-body">
     <div class="position-relative h-100">
-      <ul class="nav nav-tabs">
+      <ul class="navbar-nav nav nav-tabs">
         <li class="nav-item" data-bs-toggle="tooltip" data-bs-placement="right" title="Super-Admin"
           data-bs-trigger="hover">
           <a (click)="sidebarActive()" [routerLink]="[{ outlets: { menu: ['menu-superadmin'] } }]"
