--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -1,4 +1,4 @@
-$background-color-options: #202124;
+$background-color-options: #0f0f0f;
 
 .logo002 {
   height: 50%;
@@ -6,7 +6,7 @@ $background-color-options: #202124;
 }
 
 .main-menu-inner {
-  background-color: #363636 !important;
+  background-color: #202124 !important;
   .topbar-left {
     display: flex;
     align-items: center;
