--- a/src/app/pages/shared/home/home.component.html
+++ b/src/app/pages/shared/home/home.component.html
@@ -1,7 +1,6 @@
 
-
 <div class="container-fluid">
-    <!-- Page-Title -->
+
     <div class="row">
         <div class="col-sm-12">
             <div class="page-title-box">
@@ -11,13 +10,15 @@
                     </ol>
                 </div>
                 <h4 class="page-title">Inicio</h4>
-            </div><!--end page-title-box-->
-        </div><!--end col-->
+            </div>
+        </div>
     </div>
 
-
-
-</div><!-- container -->
+    <div class="row">
+        <!-- aqui va el contenido -->
+    </div>
+    
+</div>
 
 
 
