--- a/src/app/core/sidebar/menu-admin/menu-admin.component.html
+++ b/src/app/core/sidebar/menu-admin/menu-admin.component.html
@@ -1,27 +1,43 @@
 <div class="title-box">
     <h6 class="menu-title">Administrador</h6>
   </div>
-  <ul class="nav flex-column">
+  <ul class="navbar-nav nav flex-column">
     <li class="nav-item">
-        <a class="nav-link" [routerLink] = "['/admin-dash']">Dashboard</a>
+        <a class="nav-link" [routerLink] = "['/admin-dash']" routerLinkActive="activo">{{ 'menu.dash' | translate }}</a>
         <!-- <a class="nav-link" [routerLink]="[{ outlets: { pages: ['admin-dash'] } }]">Dashboard</a> -->
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 2</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 3</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 4</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 5</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 6</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 7</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#sidebarEjemplo" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="sidebarEjemplo">
+            Ejemplo
+        </a>
+        <div class="collapse " id="sidebarEjemplo">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">Opción</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">Opción</a>
+                </li>
+            </ul>
+        </div>
     </li>
   </ul>
