--- a/src/app/core/sidebar/menu-super-admin/menu-super-admin.component.html
+++ b/src/app/core/sidebar/menu-super-admin/menu-super-admin.component.html
@@ -1,26 +1,55 @@
 <div class="title-box">
-    <h6 class="menu-title">Super Administrador</h6>
+    <h6 class="menu-title">{{ 'menuSuper.title' | translate }}</h6>
   </div>
-  <ul class="nav flex-column">
+  <ul class="navbar-nav nav flex-column">
     <li class="nav-item">
-        <a class="nav-link" [routerLink] = "['/superDashboard']">Dashboard</a>
+        <a class="nav-link" [routerLink] = "['/superDashboard']" routerLinkActive="activo">{{ 'menu.dash' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" [routerLink] = "['/categorias']">Categorías</a>
+        <a class="nav-link" [routerLink] = "['/categorias']" routerLinkActive="activo">{{ 'menuSuper.categories' | translate }}</a>
+    </li>
+    <!-- <li class="nav-item">
+        <a class="nav-link" href="#sidebarCate" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="sidebarCate">
+            {{ 'menuSuper.categories' | translate }} 
+        </a>
+        <div class="collapse " id="sidebarCate">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link margen2" [routerLink] = "['/categorias']"> {{'menuSuper.categories' | translate}}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#"> {{'menuSuper.subcategories' | translate}}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#"> {{'menuSuper.specialties' | translate}}</a>
+                </li>
+            </ul>
+        </div>
+    </li> -->
+    <li class="nav-item">
+        <a class="nav-link" [routerLink] = "['/apis']" routerLinkActive="activo"> {{ 'menuSuper.apis' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 3</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 4</a>
+        <a class="nav-link" href="#">{{ 'menu.option' | translate }}</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Opción 5</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Opción 6</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Opción 7</a>
+        <a class="nav-link" href="#sidebarEjemplo" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="sidebarEjemplo">
+            Ejemplo
+        </a>
+        <div class="collapse " id="sidebarEjemplo">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">{{ 'menu.option' | translate }}</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link margen2" href="#">{{ 'menu.option' | translate }}</a>
+                </li>
+            </ul>
+        </div>
     </li>
   </ul>
