--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,62 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  $color-main-yellow: #ebc131;
+  $color-main-yellow:  #ebc131;
+}
+
+.form-select {
+  border-color: #ebc131 !important;
+  border-radius: 5px;
+}
+
+.nav-pills .nav-item.show .nav-link, .nav-pills .nav-link.active {
+  background: #202124;
+  color: #fff;
+  border-radius: 0;
+}
+
+.nav-link {
+  color: #202124;
+  text-decoration: none;
+  
+}
+
+.nav-link:hover{
+  color: #ebc131;
+}
+
+.activo {
+  color: #ebc131 !important;;
+}
+
+
+.form-input:hover{
+  border-color: #ebc131;
+}
+
+.form-input:focus{
+  border-color: #ebc131;
+}
+
+.btn1{
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
+.margen{
+  margin-left: 10px;
+}
+
+.btnSave{
+  color:  #202124 !important;
+  border-color: #202124 !important;
+}
+
+.btnSave:hover{
+  color:  #f4f5f7 !important;
+  background-color: #202124;
+  border-color: #202124 !important;
+}
+
+.btnCancel{
+  border-color: #c04327 !important;
 }
