--- a/src/app/components/super-admin/categorias/app-add-speciality-form/app-add-speciality-form.component.html
+++ b/src/app/components/super-admin/categorias/app-add-speciality-form/app-add-speciality-form.component.html
@@ -1,10 +1,24 @@
 <form [formGroup]="formGroup">
   <div class="mb-3">
+    <label>Tipo de Especialidad </label>
+    <input type="number"
+      class="form-control form-input"
+      id="typeSpecialityInput"
+      formControlName="typeCategoryId">
+  </div>
+  <div class="mb-3">
     <label>Tipo de Categoría </label>
     <input type="number"
       class="form-control form-input"
       id="typeCategoryInput"
       formControlName="typeCategoryId">
+  </div>
+  <div class="mb-3">
+    <label>Tipo de Subcategoría </label>
+    <input type="number"
+      class="form-control form-input"
+      id="typeSubcategoryInput"
+      formControlName="typeSubcategoryId">
   </div>
   <div class="mb-3">
     <label>Nombre</label>
@@ -16,7 +30,7 @@
   <div class="row">
     <div class="col-sm-12 ms-auto">
       <app-save-button style="margin-left: 5px;"
-        [isDisabled]="isDisabledSaveButton" (onSubmit)="onSubmit()"></app-save-button>
+        [isDisabled]="isDisabledSaveButton"></app-save-button>
       <app-cancel-button style="margin-left: 5px;"
         (onCancel)="resetForm()"></app-cancel-button>
     </div>
