--- a/src/app/components/shared/buttons/app-save-button/app-save-button.component.html
+++ b/src/app/components/shared/buttons/app-save-button/app-save-button.component.html
@@ -1,7 +1,8 @@
-<button (click)="onSubmit.emit(true)"
+<button 
   [hidden]="isHidden"
   [disabled]="isDisabled"
-  class="btn btnSave">
+  class="btn btnSave"
+  type="submit">
   Guardar
   <i class="far fa-save"
     style="margin-left: 5px;"></i></button>
