paginator and loader

--- a/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
+++ b/src/app/components/super-admin/categories/category/app-category-container/app-category-container.component.html
@@ -31,7 +31,9 @@
                     </tr>
                     </tbody>
                 </table>
-                <app-paginator></app-paginator>
+                <app-paginator >
+
+                </app-paginator>
             </div>
         </div>
     </div>
