add sucategories container

--- a/src/app/pages/super-admin/categories/categories.component.html
+++ b/src/app/pages/super-admin/categories/categories.component.html
@@ -38,30 +38,7 @@
                                 <app-category-container></app-category-container>
                         </div>
                         <div class="tab-pane p-3" id="subcategorias-1" role="tabpanel">
-                            <div class="row">
-                                <div class="col-md-12 col-lg-6">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <h4 class="card-title">{{ 'menuSuper.subcategories' | translate }}</h4>
-                                            <p class="text-muted mb-0">{{ 'categories.textSubcategories' | translate }}</p>
-                                        </div>
-                                        <div class="card-body">
-                                            <app-subcategory-list></app-subcategory-list>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-12 col-lg-6">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <h4 class="card-title">{{ 'categories.title2' | translate }}</h4>
-                                            <p class="text-muted mb-0">{{ 'categories.textSubcategoriesAdd' | translate }}</p>
-                                        </div>
-                                        <div class="card-body">
-                                          <app-subcategory-form></app-subcategory-form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                                <app-subcategory-container></app-subcategory-container>
                         </div>
                         <div class="tab-pane p-3" id="especialidades-1" role="tabpanel">
                             <div class="row">
