--- a/src/app/components/shared/paginator/paginator.component.html
+++ b/src/app/components/shared/paginator/paginator.component.html
@@ -1,12 +1,25 @@
 <ul class="pagination pagination-sm">
-    <li class="page-item active" aria-current="page">
-        <span class="page-link">
-          1
-          <span class="sr-only">(current)</span>
-        </span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">4</a></li>
-    <li class="page-item"><a class="page-link" href="#">5</a></li>
+  <!-- <li class="page-item active"
+    aria-current="page">
+    <span class="page-link">
+      1
+      <span class="sr-only">(current)</span>
+    </span>
+  </li> -->
+
+  <li (click)="onClick($event)"
+    class="page-item"
+    *ngFor="let item of getPaginatorButtons(); let i = index">
+    <a class="page-link"
+      (click)="onClick($any)">{{i + 1}}</a>
+  </li>
+
+  <!-- <li class="page-item"><a class="page-link"
+      href="#">2</a></li>
+  <li class="page-item"><a class="page-link"
+      href="#">3</a></li>
+  <li class="page-item"><a class="page-link"
+      href="#">4</a></li>
+  <li class="page-item"><a class="page-link"
+      href="#">5</a></li> -->
 </ul>
