--- a/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
+++ b/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.scss
@@ -6,8 +6,7 @@
   width: 100%;
   height: 100%;
   opacity: 80%;
-  background-color: black;
-
+  background-color: white;
 }
 
 .lds-ripple {
@@ -15,10 +14,10 @@
   position: relative;
   width: 80px;
   height: 80px;
-  background-color: black;
+  background-color: inherit;
   div {
     position: absolute;
-    border: 4px solid #fff;
+    border: 4px solid #000000;
     opacity: 1;
     border-radius: 50%;
     animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
