--- a/src/app/components/shared/paginator/paginator.component.html
+++ b/src/app/components/shared/paginator/paginator.component.html
@@ -1,4 +1,5 @@
-<ul class="pagination pagination-sm" *ngIf="isVisible">
+<ul class="pagination pagination-sm"
+  *ngIf="isVisible">
   <!-- <li class="page-item active"
     aria-current="page">
     <span class="page-link">
@@ -10,8 +11,8 @@
   <li (click)="onClick($event)"
     class="page-item"
     *ngFor="let item of getPaginatorButtons(); let i = index">
-    <a class="page-link pointer"
-      (click)="onClick($event)">{{i + 1}}</a>
+    <button class="page-link pointer"
+      (click)="onClick($event)">{{i + 1}}</button>
   </li>
 
   <!-- <li class="page-item"><a class="page-link"
