--- a/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.html
+++ b/src/app/components/shared/app-loading-spinner/app-loading-spinner.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="isLoadingVisible">
+<div class="container">
   <div class="lds-ripple">
     <div></div>
     <div></div>
